# SiPMCalibControl

./: .gitignore  .install.sh  CMakeLists.txt  CONNECT.md  Dockerfile  GantryREADME.md  INSTALL.md  README.md  TBController_8py.html  __rocv2_8cc.html  annotated.html  classDRSContainer-members.html  classDRSContainer.html  classGCoder-members.html  classGCoder.html  classGPIO-members.html  classGPIO.html  classLogger-members.html  classLogger.html  classPicoUnit-members.html  classPicoUnit.html  classVisual-members.html  classVisual.html  classcmod_1_1TBController_1_1DAQController-members.html  classcmod_1_1TBController_1_1DAQController.html  classcmod_1_1TBController_1_1I2CController-members.html  classcmod_1_1TBController_1_1I2CController.html  classcmod_1_1TBController_1_1TBController-members.html  classcmod_1_1TBController_1_1TBController.html  classcmod_1_1TBController_1_1ZMQController-members.html  classcmod_1_1TBController_1_1ZMQController.html  classcmod_1_1actionlist_1_1ActionList-members.html  classcmod_1_1actionlist_1_1ActionList.html  classcmod_1_1board_1_1Board-members.html  classcmod_1_1board_1_1Board.html  classcmod_1_1board_1_1Detector-members.html  classcmod_1_1board_1_1Detector.html  classcmod_1_1conditions_1_1Conditions-members.html  classcmod_1_1conditions_1_1Conditions.html  classcmod_1_1fmt_1_1ArgumentParseError.html  (+436 more)
.github/workflows/: doxygen.yaml
cfg/: MAX.json  SiPM_Diode_TestConfig.json  Test_SiPM2.json  Tileboard_mock.json  latest_board.json  reference_mock.json  reference_single.json  reference_single_real.json  static_calib.json  test.json  useractions.json  viscalib_mock.json
cfg/geometry/: L18-24-R3.json
cmod/: .gitignore  README.md  TBController.py  __init__.py  _rocv2.cc  actionlist.py  board.py  comarg.py  conditions.py  fmt.py  py_drs.cc  py_gcoder.cc  py_gpio.cc  py_logger.cc  py_pico.cc  py_visual.cc  readout.py  readoutmodel.py  rocv2.py  sighandle.py  sshfiler.py
ctlcmd/: README.md  __init__.py  analysiscmd.py  boardcmd.py  cmdbase.py  digicmd.py  drscmd.py  gantrycmd.py  gcodercmd.py  getset.py  motioncmd.py  picocmd.py  readout.py  tbcmd.py  viscmd.py  visualcmd.py
docs/: README.md  developer.md  doxygen.cfg  install.md  layout.xml  mainpage.md
dofiles/: .gitignore  FilterWheel_Setup.txt  SiPM_Array_Mockup.tex  calibrate_Tileboard_mock.txt  detailed_timescan.txt  test.txt  visual_calib_test.txt
python/: cmdbase.py  digicmd.py  getset.py  measurecmd.py  motioncmd.py  readout.py  session.py
scripts/: make_session_dirs.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+67 more)
server/: README.md  __init__.py  cmod  ctlcmd  get_external.sh  manual.md  session.py  sockets.py  style.scss  views.py
src/: CMakeLists.txt  README.md  drs.cc  drs.hpp  gcoder.cc  gcoder.hpp  gpio.cc  gpio.hpp  logger.cc  logger.hpp  pico.cc  pico.hpp  singleton.hpp  trigger.cc  trigger.hpp  visual.cc  visual.hpp
src/board/: board.cc  board.hpp
src/boost/: board.cc  gcoder.cc  gcodestream.cc  logger.cc  pico.cc  tdaq.cc  trigger.cc  visual.cc
src/common/: logger.cc  logger.hpp  logger_private.cc  logger_private.hpp
src/gantry_control/: __init__.py  version.py
src/gantry_control/analysis/: README.md  analysiscmd.py  lumi_hscan.py  lumi_zscan.py  pack_board_results.py
src/gantry_control/cli/: README.md  __init__.py  arguments.py  board.py  cmdbase.py  format.py  loghandle.py  progress_monitor.py  readout.py  readoutmodel.py  saveroot.py  session.py
src/gantry_control/gui_server/: README.md  __init__.py  action_socket.py  session.py  sync_socket.py  utils.py  view.py
src/gantry_control/gui_server/action/: __init__.py  board.py  hardware.py  test_action.py
src/gantry_control/gui_server/sync/: __init__.py  action.py  hardware.py  telemetry.py
src/gantry_control/gui_server/view/: __init__.py  config_query.py  download.py  plot_detector.py  visual_response.py
src/gantry_control/guiserver/: session.py  test.py
src/gantry_control/tbc/: HGCROCv2RawData.h  README.md  __init__.py  _rocv2.cc  rocv2.py  tbc.py
src/gcode/: gcode_stream.cc  gcode_stream.hpp
src/gcoder/: gcoder.cc  gcoder.hpp
src/gui_client/: package.json  run_build.py
src/gui_client/public/: index.html  manifest.json
src/gui_client/src/: app.css  index.tsx  session.ts
src/gui_client/src/Components/: Tile.tsx
src/gui_client/src/sections/: App.tsx
src/gui_client/src/sections/board/: Board.tsx
src/gui_client/src/sections/board/components/: Actions.tsx  Detector.tsx
src/gui_client/src/sections/command_line/: CommandLine.tsx  CommandLine2.tsx
src/gui_client/src/sections/command_line/styles/: CommandLine.module.css
src/gui_client/src/sections/message/: MessageBox.tsx
src/gui_client/src/sections/monitoring/: Monitoring.tsx
src/gui_client/src/sections/monitoring/components/: ActionStatus.tsx  GantryStatus.tsx  MessageStatus.tsx  SystemStatus.tsx  TelemetryData.tsx  VisualSystem.tsx
src/gui_client/src/sections/systemstatus/: SystemStatus.tsx
src/gui_client/src/sections/systemstatus/components/: ActionStatus.tsx  GantryStatus.tsx  HardwareStatus.tsx  TelemetryData.tsx
src/gui_client/src/sections/tileboard/: Tileboard.tsx  TileboardContainer.tsx
src/gui_client/src/sections/tileboard/components/: Actions.tsx  DetectorView.tsx  TileboardLoad.tsx  TileboardView.tsx
src/gui_client/src/sections/tileboard/components/actions/: BoardActions.tsx
src/gui_client/src/utils/: common.tsx  format.ts
src/pico/: pico.cc  pico.hpp
src/tdaq/: tdaq.cc  tdaq.hpp
src/test/: visualtest.cc
src/testbin/: mytest.cc
src/trigger/: trigger.cc  trigger.hpp
src/visual/: visual.cc  visual.hpp
test/: mytest.cc  picotest.cc  pulsetest.cc
(+109 files in other folders)
